# space-marine-voicemic

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/space_marine/: __init__.py  audio_engine.py  cli.py  config.py  devices.py  effects.py
tests/: test_config.py  test_devices.py  test_effects.py  test_engine_callback.py
