[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-marine-voice"
version = "0.1.0"
description = "Real-time Space Marine voice changer using pedalboard + sounddevice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Space Marine Voice Project" }]
dependencies = [
    "pedalboard>=0.9.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "typer>=0.12.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
space-marine = "space_marine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
